infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: ccrane91/client
---
apiVersion: v1
kind: Service
metadata:
  # the name of this service
  name: client-srv
spec:
  selector:
    # will manage the client nodes
    app: client
  # and expose an internal ClusterIP to communicate with them
  type: ClusterIP
  # at this port
  ports:
    - name: client
      protocol: TCP
      port: 8080
      targetPort: 8080
