infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: ccrane91/comments
---
apiVersion: v1
kind: Service
metadata:
  # the name of this service
  name: comments-srv
spec:
  selector:
    # will manage the comments nodes
    app: comments
  # and expose an internal ClusterIP to communicate with them
  type: ClusterIP
  # at this port
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
