infra/k8s/posts-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts #
    spec:
      containers:
        - name: posts
          image: ccrane91/posts
---
apiVersion: v1
kind: Service
metadata:
  # the name of this service
  name: posts-srv
spec:
  selector:
    # will manage the event-bus nodes
    app: posts
  # and expose an internal ClusterIP to communicate with them
  type: ClusterIP
  # at this port
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
