infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport-srv
spec:
  type: NodePort
  selector:
    app: posts # the name of the app from deployment file
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
